[package]
name = "telegram_course_bot"
version = "0.1.0"
edition = "2024"

[dependencies]

[dependencies]
teloxide = { version = "0.12", features = ["macros", "auto-send"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
chrono = "0.4"
rand = "0.8"
futures = "0.3"
postgres = "0.19"
log = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
pretty_env_logger = "0.4" # Add pretty_env_logger

[[bin]]
name = "telegram_course_bot"
path = "src/main.rs"
